--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,12 @@
     <string name="app_name">Financial Products</string>
     <string name="action_settings">Settings</string>
     <string name="consumer_loans">Consumer loans</string>
-    <string name="mortage_loans">Mortage loans</string>
+    <string name="mortgage_loans">Mortgage loans</string>
     <string name="credit_cards">Credit cards</string>
     <string name="deposits">Deposits</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
+    <string name="search">Search</string>
 
     <string-array name="fragments_names">
         <item>Обмени</item>
@@ -14,5 +15,13 @@
         <item>Локални курсове</item>
         <item>Логове</item>
         <item>Наличност</item>
+    </string-array>
+
+    <string-array name="loans">
+        <item>Auto</item>
+        <item>Consumer</item>
+        <item>Credit cards</item>
+        <item>Deposits</item>
+        <item>Mortgage</item>
     </string-array>
 </resources>
