--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -8,4 +8,15 @@
     <string name="deposits">Депозити</string>
     <string name="empty_fields">Всички полета са задължителни</string>
     <string name="no_internet">Възникна проблем при създаване на връзка със сървиса</string>
+    <string name="product">Продукт</string>
+    <string name="no_result">Няма резултати</string>
+
+    <string-array name="loans">
+        <item>Авто</item>
+        <item>Потребителски</item>
+        <item>Кредни карти</item>
+        <item>Депозит</item>
+        <item>Ипотечен</item>
+        <item>Търсене</item>
+    </string-array>
 </resources>
