--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Financial Products</string>
     <string name="action_settings">Settings</string>
@@ -30,6 +31,9 @@
     <string name="loan_purpose">Loan purpose</string>
     <string name="property_value">Property value</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="auto">Auto</string>
+    <string name="consumer">Consumer</string>
+    <string name="mortgage">Mortgage</string>
 
     <string-array name="loans">
         <item>Auto</item>
@@ -39,6 +43,4 @@
         <item>Mortgage</item>
         <item>Search</item>
     </string-array>
-
-    <string name="hello_world">Hello world!</string>
 </resources>
